Fix T74220 Mantaflow Color Mapping not ignoring alpha value

And also remove some sRGB hack.